# Cmake-gtest-coverage

./: .tags  CMakeLists.txt  CMakeLists.txt.bak  README.md  file
include/: Student.h
src/: Student.cpp  main.cpp
unittest/: CMakeLists.txt  TestStudent.cpp
